[package]
name = "rust_check_webinject"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.3", features = ["blocking", "cookies", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
quick-xml = { version = "0.40", features = ["serialize"] }
clap = { version = "4.0", features = ["derive"] }
regex = "1.10"
chrono = "0.4"
